language/move-lang/tests/move_check/expansion/module_invalid_names.move
address 0x42 {
module _m {
}
module _ {
}
module ___ {
}
}
